force-app/main/default/objects/Pub_Infraction__c/Pub_Infraction__c.object-meta.xml
<CustomObject>
    <label>Pub Infraction</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pub Infractions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>