force-app/main/default/objects/Pub_Infraction__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banned source(s)</fullName>
            </value>
            <value>
                <fullName>Banned publisher</fullName>
            </value>
            <value>
                <fullName>Paused publisher temporarily</fullName>
            </value>
            <value>
                <fullName>Warning to publisher</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>