force-app/main/default/objects/Pub_Infraction__c/fields/Affiliate_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliate Account Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Affiliate Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pub Infractions</relationshipLabel>
    <relationshipName>Pub_Infractions</relationshipName>
    <type>Lookup</type>
</CustomField>