force-app/main/default/objects/Pub_Infraction__c/fields/Affiliate_ID__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_ID__c</fullName>
    <label>Affiliate ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>