force-app/main/default/objects/Pub_Infraction__c/fields/Affiliate_Sources__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Sources__c</fullName>
    <label>Affiliate Source(s)</label>
    <type>TextArea</type>
</CustomField>