force-app/main/default/objects/Pub_Infraction__c/fields/AffiliateID__c.field-meta.xml
<CustomField>
    <fullName>AffiliateID__c</fullName>
    <formula>Affiliate_Account_Name__r.Affiliate_ID__c</formula>
    <label>Affiliate ID - formula</label>
    <type>Text</type>
</CustomField>