force-app/main/default/objects/Pub_Infraction__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Pub Infractions</relationshipLabel>
    <relationshipName>Pub_Infractions</relationshipName>
    <type>Lookup</type>
</CustomField>