force-app/main/default/objects/Pub_Infraction__c/fields/Date_Caught__c.field-meta.xml
<CustomField>
    <fullName>Date_Caught__c</fullName>
    <label>Date Caught</label>
    <type>Date</type>
</CustomField>