force-app/main/default/objects/Pub_Infraction__c/fields/Incent__c.field-meta.xml
<CustomField>
    <fullName>Incent__c</fullName>
    <label>Incent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>