force-app/main/default/objects/Pub_Infraction__c/fields/Infraction_Details__c.field-meta.xml
<CustomField>
    <fullName>Infraction_Details__c</fullName>
    <label>Infraction Details</label>
    <type>TextArea</type>
</CustomField>