force-app/main/default/objects/Pub_Infraction__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rebrokering</fullName>
            </value>
            <value>
                <fullName>Click Fraud</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>IP/Bot</fullName>
            </value>
            <value>
                <fullName>Retention/Quality</fullName>
            </value>
            <value>
                <fullName>Blacklist/Audit</fullName>
            </value>
            <value>
                <fullName>Click Spike</fullName>
            </value>
            <value>
                <fullName>Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ad Stacking</fullName>
            </value>
            <value>
                <fullName>Distribution Outlier</fullName>
            </value>
            <value>
                <fullName>Incent</fullName>
            </value>
            <value>
                <fullName>SDK Spoofing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>